ui: picture: always set 'alt', prepend 'Picture:'

--- a/app/views/_elements/components/picture.haml
+++ b/app/views/_elements/components/picture.haml
@@ -2,7 +2,7 @@
   text ||= nil
   props = {
     src: href,
-    alt: text,
+    alt: text ? "Picture: #{text}" : '(Picture)', # TODO: i18n
     class: classes
   }
   return unless props[:src]
