Admin interface: meta keys
- meta keys: editing, displaying details
- filtering meta keys by id / label
- links between vocabularies & meta keys in both directions
- extract meta_keys filters into concern
- add Type label in filters
- meta key can be deleted
- new template
- possibility to create a meta key

--- a/app/views/admin/vocables/_vocable.html.haml
+++ b/app/views/admin/vocables/_vocable.html.haml
@@ -1,6 +1,6 @@
 %tr
   %td= vocable.id
-  %td= vocable.meta_key.id
+  %td= link_to vocable.meta_key.id, admin_meta_key_path(vocable.meta_key)
   %td= vocable
   %td.active.col-xs-2
     = render partial: 'action_buttons', locals: { vocable: vocable, size: 'btn-sm' }
