--- a/app/views/admin/vocabularies/_vocabulary.html.haml
+++ b/app/views/admin/vocabularies/_vocabulary.html.haml
@@ -7,6 +7,8 @@
       = link_to admin_vocabulary_path(vocabulary), class: 'btn btn-default btn-sm' do
         %i.glyphicon.glyphicon-eye-open
       = render partial: 'action_buttons', locals: { vocabulary: vocabulary, size: 'btn-sm' }
-      = link_to "MetaKeys: #{vocabulary.meta_keys_count}", '#', class: 'btn btn-default btn-sm'
+      = link_to "MetaKeys: #{vocabulary.meta_keys_count}",
+          admin_meta_keys_path(search_term: "vocabulary_id:#{vocabulary.id}"),
+          class: 'btn btn-default btn-sm'
       = link_to "Vocables: #{vocabulary.vocables.count}", admin_vocabulary_vocables_path(vocabulary),
         class: 'btn btn-default btn-sm'
