--- a/app/views/admin/vocabularies/show.html.haml
+++ b/app/views/admin/vocabularies/show.html.haml
@@ -30,15 +30,18 @@
       %thead
         %tr
           %th ID
-          %th Vocables count
+          %th Meta datum object type
           %th
       %tbody
-        - @vocabulary.meta_keys.find_each do |meta_key|
+        - @meta_keys.each do |meta_key|
           %tr
-            %td= meta_key.id
-            %td= meta_key.vocables.count
+            %td= link_to meta_key.id, admin_meta_key_path(meta_key)
+            %td= meta_key.meta_datum_object_type
             %td.active.col-xs-1
-              = link_to admin_vocabulary_vocables_path(@vocabulary, search_term: meta_key.id),
-                class: 'btn btn-default' do
-                %i.glyphicon.glyphicon-eye-open
-                Show vocables
+              - if meta_key.can_have_vocables?
+                = link_to admin_vocabulary_vocables_path(@vocabulary, search_term: meta_key.id),
+                  class: 'btn btn-default' do
+                  %i.glyphicon.glyphicon-eye-open
+                  Show vocables (#{meta_key.vocables_count})
+
+    = paginate @meta_keys
