--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -22,6 +22,7 @@
             = navbar_item 'Groups', admin_groups_path
             = navbar_item 'Media Entries', admin_media_entries_path
             = navbar_item 'Vocabularies', admin_vocabularies_path
+            = navbar_item 'Meta Keys', admin_meta_keys_path
             %li.dropdown
               %a.dropdown-toggle{href: '#', data: { toggle: 'dropdown' }}
                 %i.glyphicon.glyphicon-user
