admin: Add people
Conflicts:
	.cider-ci/tasks/rspec-tasks.yml
	app/models/concerns/people/filters.rb
	app/models/person.rb
	config/routes.rb

# Conflicts:
#	.cider-ci/tasks/rspec-feature-tasks.yml
#	.cider-ci/tasks/rspec-tasks.yml
#	app/models/concerns/people/filters.rb
#	app/models/person.rb
#	app/views/layouts/admin.html.haml
#	config/routes.rb
#	db/personas.pgbin

--- a/app/views/admin/users/_user.html.haml
+++ b/app/views/admin/users/_user.html.haml
@@ -1,7 +1,9 @@
 %tr{ class: ('success' if user.admin?) }
   %td= user.login
   %td= user.email
-  %td= "#{user.person.first_name} #{user.person.last_name}"
+  %td
+    = link_to admin_person_path(user.person) do
+      = "#{user.person.first_name} #{user.person.last_name}"
   %td= user.media_entries.count
   %td{ class: (user.admin? ? 'success' : 'danger') }
     = user.admin? ? 'Yes' : 'No'
