--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -21,6 +21,7 @@
             = navbar_item 'Sets', admin_collections_path
             = navbar_item 'Filter Sets', admin_filter_sets_path
             = navbar_item 'Users', admin_users_path
+            = navbar_item 'People', admin_people_path
             = navbar_item 'API Clients', admin_api_clients_path
             = navbar_item 'Groups', admin_groups_path
             = navbar_item 'Media Entries', admin_media_entries_path
