--- a/app/views/collections/show.html.haml
+++ b/app/views/collections/show.html.haml
@@ -40,6 +40,6 @@
       .ui-container.table.auto
         .ui-container.table-cell.table-substance
           = deco('polybox', mods: ['active'],
-                  poly_resources: @get.poly_resources)
+                  poly_resources: @get.child_media_resources)
 
 = deco('resource_show', res_show_data)
