--- a/app/views/collections/show.html.haml
+++ b/app/views/collections/show.html.haml
@@ -53,6 +53,6 @@
       .ui-container.table.auto
         .ui-container.table-cell.table-substance
           = deco('polybox', mods: ['active'],
-                  poly_resources: @get.relations.child_media_resources)
+                  media_resources: @get.relations.child_media_resources)
 
 = deco('resource_show', res_show_data)
