--- a/app/views/collections/show.html.haml
+++ b/app/views/collections/show.html.haml
@@ -31,6 +31,19 @@
   }
 
 - res_show_data[:more_info] = capture_haml do
+  .ui-container.midtone.rounded-bottom.pal.well
+    %h3.title-l.separated.mbm
+      = "Relations"
+    - unless @get.relations.any?
+      = "No relations found."
+    - else
+      %h4.title-m.mbm= "Parents"
+      = deco('polybox', media_resources: @get.relations.parent_media_resources)
+      %h4.title-m.mbm= "Siblings"
+      = deco('polybox', media_resources: @get.relations.sibling_media_resources)
+
+    .ui-separator.mbl
+
   -# TODO: component
   #ui-resources-list-container.ui-container.midtone.rounded-bottom
     .ui-container.inverted.ui-toolbar.pvx
