sass: workaround sass(/-rails) variable/glob bug
NOTE: This just sets the default color-scheme to 'turquoise' – selecting any other scheme with variables is still be broken and needs to be fixed someday™.

--- a/app/assets/stylesheets/_config.sass
+++ b/app/assets/stylesheets/_config.sass
@@ -3,9 +3,15 @@
 
 @import "config/defaults/*"
 
-@import "config/local/*" 
+@import "config/local/*"
 
+
+// TMP: Workaround - config is broken so set it to what the styleguide expects
+$main-color: hsla(174, 59%, 39%, 1)
 +colour-palette
+$main-color-dark    : darken($main-color, 10%)
+$main-color-light   : lighten($main-color, 10%)
+
 
 /* Typography
  *-----------------------------------------
