--- a/app/assets/stylesheets/combos/_ui-resources-common.sass
+++ b/app/assets/stylesheets/combos/_ui-resources-common.sass
@@ -77,6 +77,7 @@
     top: 1px
     font-size: 14px
 
+// TODO: document and/or use .ui-invalid
 // Invalid state
 .ui-resource.ui-invalid
   .ui-thumbnail-privacy
@@ -84,6 +85,6 @@
     display: block !important
     left: 15px
     top: 15px
-    .icon-privacy-private:before
+    & i:before
       content: "\e616"
       color: $white
