sass: fix warnings
- rename *.css.sass
- empty selectors

--- a/app/assets/stylesheets/combos/_ui-resources-miniature.sass
+++ b/app/assets/stylesheets/combos/_ui-resources-miniature.sass
@@ -70,7 +70,7 @@
   // Video entries get pellicola background
   .ui-thumbnail.video .ui-thumbnail-image-wrapper
     background: $white image-url("backgrounds/thumb-video-backg-small.png") 0 0px no-repeat
-    
+
   // Some nasty layouting adjustments
   .ui-resources-page
     margin: 5px 0 0 0
@@ -82,7 +82,7 @@
  * Active Mode
  * -------------------------------------
 
-.ui-resources.miniature.active
+// .ui-resources.miniature.active
 
 // Hover
 
