--- a/app/assets/stylesheets/combos/_ui-resources-tiles.sass
+++ b/app/assets/stylesheets/combos/_ui-resources-tiles.sass
@@ -38,7 +38,7 @@
     column-span: 1
 
   .ui-resource
-    +column-break-inside(avoid)
+    +break-inside(avoid)
     width: 100%
 
   .ui-tile
@@ -111,7 +111,7 @@
 .ui-resources
   .ui-tile
     display: none
-  
+
 // - un-hide it when layout===tile, but hide the rest!
 .ui-resources.tiles
   .ui-tile
