--- a/app/assets/stylesheets/combos/_ui-rights-management.sass
+++ b/app/assets/stylesheets/combos/_ui-rights-management.sass
@@ -3,7 +3,7 @@
  *
  * Styleguide 7.12 */
 
-.ui-rights-management
+// .ui-rights-management
 
 .ui-rights-management .ui-modal-body
   overflow-y: scroll
@@ -157,8 +157,8 @@
 .ui-rights-check-label
   cursor: default
   display: inline-block
-  &.mixed:not(.overwrite)
-    input
+  // &.mixed:not(.overwrite)
+    // input
 
 // mixed indicator
 
