--- a/app/assets/stylesheets/combos/_upload.sass
+++ b/app/assets/stylesheets/combos/_upload.sass
@@ -18,9 +18,9 @@
   font-weight: 700
   text-align: center
 
-.upload-file-list
+// .upload-file-list
 
-.upload-list-item
+// .upload-list-item
 
 /**
  * ## Upload Preview `.upload-preview`
