--- a/app/assets/stylesheets/components/_ui-stats.sass
+++ b/app/assets/stylesheets/components/_ui-stats.sass
@@ -1,8 +1,8 @@
 // Stat modules
 
-.ui-stats
+// .ui-stats
 
-.ui-stats-title
+// .ui-stats-title
 
 .ui-stats__module
   padding: $space-m $space-l
