--- a/app/assets/stylesheets/components/_ui-thumb-actions.sass
+++ b/app/assets/stylesheets/components/_ui-thumb-actions.sass
@@ -24,10 +24,10 @@
 
 .ui-thumbnail-action-checkbox,
 .ui-thumbnail-action-favorite
-  i
+  // i
   &:hover
     text-decoration: none
-    i
+    // i
 
 .ui-thumbnail-action
   color: $mono-heavy
