--- a/app/assets/stylesheets/components/_ui-side-navigation.sass
+++ b/app/assets/stylesheets/components/_ui-side-navigation.sass
@@ -26,7 +26,7 @@
 
 // 2nd Level navigation list
 
-.ui-side-navigation-lvl2
+// .ui-side-navigation-lvl2
 
 .ui-side-navigation-lvl2-item > a
   @extend a.weak
