sass: fix more warnings

--- a/app/assets/stylesheets/styleguide.sass
+++ b/app/assets/stylesheets/styleguide.sass
@@ -602,9 +602,9 @@ body.sg-full
 .sg-intro
   margin-bottom: 40px
   padding: 0 60px
-  ol
-    li
-  p
+  // ol
+  //   li
+  // p
   code
     border-radius: 5px
     background: #ccc
