ui: view: Group#show with entrusted media
also small fixes and cleanups

--- a/app/views/_elements/components/tag-cloud.haml
+++ b/app/views/_elements/components/tag-cloud.haml
@@ -21,7 +21,7 @@
     %li.ui-tag-cloud-item
       :ruby
         item = { text: item } if item.is_a?(String)
-        next unless item.is_a?(Hash)
+        next unless item.is_a?(Hash) && item[:text] && item[:text].is_a?(String)
 
         html_tag_type = 'a'
         props = {
