--- a/app/views/_elements/decorators/resource_show_overview.haml
+++ b/app/views/_elements/decorators/resource_show_overview.haml
@@ -2,6 +2,7 @@
   throw 'ui: missing data!' unless content
   preview ||= nil
   preview_large ||= nil
+  mods ||= nil
   throw 'ui: invalid data!' if preview and preview_large
 
 -# TODO: refactor CSS class names…
