Admin interface: meta datums section
- link to an associated Vocabulary
- link to an associated Meta Key
- link to an associated Media Entry
- link to an associated Collection
- link to an associated Filter Set
- link from a Media Entry to Meta Datums
- link from a Collection to Meta Datums
- link from a Filter Set to Meta Datums
- update cider-ci rspec tasks

--- a/app/views/admin/collections/_action_panel.html.haml
+++ b/app/views/admin/collections/_action_panel.html.haml
@@ -7,3 +7,5 @@
             %i.glyphicon.glyphicon-user
             = "User: #{user.person}"
           = render partial: 'action_buttons', locals: { collection: collection, size: nil }
+          = link_to admin_meta_datums_path(search_term: @collection.id, search_by: :collection_id), class: 'btn btn-default' do
+            Meta Datums: #{@collection.meta_data.count}
