--- a/app/views/admin/filter_sets/show.html.haml
+++ b/app/views/admin/filter_sets/show.html.haml
@@ -1,7 +1,7 @@
 .page-header
   %h1
     %i.glyphicon.glyphicon-filter
-    #{@filter_set}
+    #{@filter_set.title}
 
 .row
   .col-xs-12
@@ -11,6 +11,8 @@
           = link_to admin_user_path(@user), class: 'btn btn-default' do
             %i.glyphicon.glyphicon-user
             User: #{@user.person}
+          = link_to admin_meta_datums_path(search_term: @filter_set.id, search_by: :filter_set_id), class: 'btn btn-default' do
+            Meta Datums: #{@filter_set.meta_data.count}
 
 .row
   .col-xs-12
