--- a/app/views/admin/media_entries/show.html.haml
+++ b/app/views/admin/media_entries/show.html.haml
@@ -5,6 +5,16 @@
 
 .row
   .col-xs-12
+    .panel.panel-default
+      .panel-body
+        .btn-group
+          = link_to admin_media_file_path(@media_entry.media_file), class: 'btn btn-default' do
+            Media-File: #{@media_entry.media_file.id}
+          = link_to admin_meta_datums_path(search_term: @media_entry.id, search_by: :media_entry_id), class: 'btn btn-default' do
+            Meta Datums: #{@media_entry.meta_data.count}
+
+.row
+  .col-xs-12
     %table.table.table-striped
       %thead
       %tbody
@@ -13,9 +23,3 @@
             %td
               %strong= attr.first.humanize
             %td= attr.last
-        %tr
-          %td
-            %strong Media-File
-          %td
-            = link_to admin_media_file_path(@media_entry.media_file) do
-              Media-File: #{@media_entry.media_file.id}
