--- a/app/views/_elements/components/tag-cloud.haml
+++ b/app/views/_elements/components/tag-cloud.haml
@@ -1,5 +1,17 @@
 :ruby
-  return unless list
+  throw 'ui: list is not Array!' unless list && list.is_a?(Array)
+
+  tag_list = list.map do |item|
+    case # Allow String or Hash with String
+    when item.is_a?(String) then { text: item }
+    when item.is_a?(Hash) && item[:text] && item[:text].is_a?(String)
+      item
+    else throw 'ui: invalid data!'
+    end
+  end
+
+  return if tag_list.blank?
+
   icon_type =
     case
     when classes.delete('tag-cloud-label') then 'tag'
@@ -17,11 +29,10 @@
 
 
 %ul.ui-tag-cloud{class: classes}
-  - list.each do |item|
+  - tag_list.each do |item|
     %li.ui-tag-cloud-item
       :ruby
-        item = { text: item } if item.is_a?(String)
-        next unless item.is_a?(Hash) && item[:text] && item[:text].is_a?(String)
+        next unless item
 
         html_tag_type = 'a'
         props = {
