view: 'my_dashboard_sections'
- implement full views for all sub-section using existing presenter
- set all polyboxes to 'active'

--- a/app/views/_elements/combos/resources-header.haml
+++ b/app/views/_elements/combos/resources-header.haml
@@ -1,7 +1,9 @@
 :ruby
   filter_bar ||= nil
+  link ||= nil
   text ||= nil
   text = nil if text && text.empty?
+  throw 'ui: missing title!' unless title
 
 .ui-resources-header
 
