view: my_dashboard: side-menu, limits, fixes, DRY
- use layout 'app_with_sidebar'
- dynamically build menu for sidebar
- consistent limit, set to 12
- fix polybox: don't instantiate page-header

--- a/app/ui_elements/decorators/polybox.haml
+++ b/app/ui_elements/decorators/polybox.haml
@@ -107,7 +107,9 @@
 
 .POLYBOX
   - if title
-    = combo('resources-header', title: title, link: link, filter_bar: filter_bar)
+    = title
+    -# TODO: cleanup
+    -# = combo('resources-header', title: title, link: link, filter_bar: filter_bar)
 
   - return fallback if all_lists_are_empty
 
