--- a/app/views/layouts/app_with_sidebar.html.haml
+++ b/app/views/layouts/app_with_sidebar.html.haml
@@ -14,6 +14,6 @@
         = content_for(:page_sidebar)
 
     .ui-container.app-body-content.table-cell.table-substance.context-fix.pal
-      = content_for(:page_content)s
+      = content_for(:page_content)
 
 = render template: 'layouts/application'
