--- a/app/views/application/root.html.haml
+++ b/app/views/application/root.html.haml
@@ -12,6 +12,9 @@
               type: 'password',
               class: 'block large' }
         .ui-form-group.rowed.compact
+          = check_box_tag 'remember_me', 'remember_me'
+          remember me
+        .ui-form-group.rowed.compact
           = component('button.primary', mods: ['large', 'block'],
                                         type: 'submit') do
             = "Anmelden"
