decorators: meta_datum types, -by_vocabulary tables, rows
also rename person-tag-list

--- a/app/views/collections/show.html.haml
+++ b/app/views/collections/show.html.haml
@@ -21,7 +21,7 @@
                         mods: tag_mods,
                         list: @get.keywords)],
                      ['Responsible',
-                      deco('person-tag', person: @get.responsible,
+                      deco('person-tag-list', person: @get.responsible,
                                          mods: tag_mods)]
                     ])
     ),
